<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/gemach_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:padding="24dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/gemach_list_text"/>
    <TextView
        android:id="@+id/new_gemach_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gemach_text"
        android:background="@color/colorPrimaryLight"
        android:paddingBottom="8dp"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:text="@string/new_gemachim_listed"/>

    <View
        android:id="@+id/gemach_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/new_gemach_text"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/gemach_line"/>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_entries_found"
        android:visibility="gone"/>

</RelativeLayout>